--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>learn_new</title>
   </head>
   <body>
-    
+    <h2>Another day to learn and grow and be better by God's grace</h2>
   </body>
 </html>
